se hizo un cambio en la linea tal

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
          <section id="content">     
               <article class="article">
-                 <h2>Hay dos verdades universales de todo pelo rizado: se encrespa y se infla. Y para vencer estas dos batallas hay dos soluciones: hidratación y corte, y de eso os voy a hablar.</h2>
+                 <h2>Hay dos verdades versales de todo pelo rizado: se encrespa y se infla. Y para vencer estas dos batallas hay dos soluciones: hidratación y corte, y de eso os voy a hablar.</h2>
                  <p>
                  <h2>El corte de pelo es fundamental. Muchas me contáis que ante el cabello rizado los cortes son limitados y no estoy de acuerdo. Hay que estar abierta y aceptar el volumen así disfrutarás de muchos estilos diferentes. Estamos en los años de máximo esplendor del rizo y onda en todas sus versiones.</h2>
                  <p>
